# X-Algorithm-Understanding

./: .gitignore  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json
apps/desktop/: package.json
apps/desktop/electron/: main.cjs
apps/desktop/scripts/: dev-desktop.mjs  generate-mac-icon.mjs  prepare-standalone.mjs
apps/desktop/src/app/: layout.tsx  page.tsx
apps/desktop/src/app/api/servers/: route.ts
apps/desktop/src/app/api/servers/[pid]/terminate/: route.ts
apps/desktop/src/components/: localhost-dashboard.tsx
apps/desktop/src/components/ui/: alert-dialog.tsx  button.tsx
apps/desktop/src/lib/: localhost-servers.ts  localhost-types.ts
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
crates/candidate-pipeline/: Cargo.toml
crates/candidate-pipeline/src/: filter.rs  hydrator.rs  lib.rs  pipeline.rs  scorer.rs  selector.rs  source.rs
crates/home-mixer/: Cargo.toml
crates/home-mixer/src/: main.rs
crates/thunder/: Cargo.toml
crates/thunder/src/: lib.rs
phoenix/: README.md  pyproject.toml
phoenix/src/phoenix/: __init__.py  cli.py
phoenix/src/phoenix/ranking/: __init__.py  transformer.py
phoenix/src/phoenix/retrieval/: __init__.py  two_tower.py
src/app/: layout.tsx  manifest.ts  page.tsx
src/app/api/coinbase/: route.ts
src/app/api/fmp/: route.ts
src/app/api/servers/[pid]/terminate/: route.ts
src/components/ui/: button.tsx
src/lib/: localhost-servers.ts  localhost-types.ts
