[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix"
version = "0.1.0"
description = "ML retrieval and ranking for the For You candidate pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
ml = [
    "numpy>=1.26",
    "torch>=2.2",
]

[project.scripts]
phoenix-demo = "phoenix.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
